src/styles/less/TrophyRoom.less
@import '../less/variables.less';

//Leaderboard table styles

.leaderboard {
  width: 50%;
}

.parent:nth-of-type(odd) {
  background-color: #faac45ef;
}

.ant-table-tbody {
  text-align: center;
}

.ant-table-tbody > tr.ant-table-row:hover > td {
  background: unset;
}

.ant-table-row > td.ant-table-column-sort {
  background: unset;
}

.ant-table-thead > tr > th {
  background: #f4f4f4;
  text-align: center;
}

.ant-table-thead th.ant-table-column-has-sorters {
  cursor: auto;
}

.ant-table-thead th.ant-table-column-has-sorters:hover {
  background: #f4f4f4;
}

.ant-table-thead th.ant-table-column-has-sorters:hover {
  cursor: auto;
}

// Trophy room page styles

.h2 {
  color: #ff9100;
  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
  text-align: center;
  font-size: 3.5rem;
  font-family: 'bangers';
  font-weight: bold;
  z-index: 1;
  letter-spacing: 7px;
  margin: 0 0;
  padding: 15px 0px;
  
  @media @mobile {
    font-size: 3rem;
  }
}

.ant-modal-title {
  color: #ff9100;
  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
  text-align: center;
  font-size: 3rem;
  font-family: 'bangers';
  font-weight: bold;
  z-index: 1;
  letter-spacing: 7px;
}

.ant-modal-body h3 {
  color: #ff9100;
  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
  font-size: 2rem;
  font-family: 'bangers';
  font-weight: bold;
  letter-spacing: 2px;
  z-index: 1;
  text-align: center;
}

.ant-modal-body p {
  color: #939aff;
  text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
  font-size: 1rem;
  font-family: 'bangers';
  letter-spacing: 1px;
  z-index: 1;
  text-align: center;
}
.trophy-container {
  display: flex;
  // width: 95%;
  justify-content: center;
  margin: auto;
  // @media screen and (@mobile){
    //     flex-direction: column;
    // }
  }
  .modal-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  
  .custom-divider {
    margin: 0px 20px;
    width: 1px;
    
    @media screen and (@mobile) {
      visibility: hidden;
    }
  }
  
  .ant-modal-title {
    color: #ff9100;
    text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
    text-align: center;
    font-size: 3rem;
    font-family: 'bangers';
    font-weight: bold;
    z-index: 1;
    letter-spacing: 7px;
  }
  
  .ant-modal-body h3 {
    color: #ff9100;
    text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
    font-size: 2rem;
    font-family: 'bangers';
    font-weight: bold;
    letter-spacing: 2px;
    z-index: 1;
    text-align: center;
  }
  
  .ant-modal-body p {
    color: #939aff;
    text-shadow: -4px 0 #ffffff, 0 4px #ffffff, 4px 0 #ffffff, 0 -4px #ffffff;
    font-size: 1rem;
    font-family: 'bangers';
    letter-spacing: 1px;
    z-index: 1;
    text-align: center;
  }
}

